--- a/style.css
+++ b/style.css
@@ -1,25 +1,40 @@
 
 * {
-    outline: auto;
+    font-size: x-large;
+    max-width: 100%;
+    background-color:ghostwhite;
 }
 
-
 nav {
-    height: 100px;
-
+    outline: auto;
+    text-align: center;
+    padding-bottom: 1%;
+    margin-bottom: 2%;
 }
 
 main {
+    
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
+    
 }
 
 .item {
-    width: 20%;
+    outline: auto;
+    text-align: center;
+    
+   
 }
 
 img {
     width: 100%;
+    height: 100px;
+}
+
+a {
+    color: black;
+    word-wrap: break-word;
 }
 
 
