--- a/style.css
+++ b/style.css
@@ -29,7 +29,12 @@ main {
 
 img {
     width: 100%;
-    height: 100px;
+    height: 100px;   
+    cursor: pointer;
+}
+
+button {
+    cursor: pointer;
 }
 
 a {
